fix katex overflow

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -151,3 +151,6 @@
 .katex {
   @apply text-skin-base;
 }
+.katex-display {
+  overflow: auto hidden;
+}
